# REIGNNv1

./: README.md  download.sh  requirements.txt
REIGNN/: README.md  REIGNN.ipynb  REIGNN.py  RMGNN_test.ipynb
backend/: README.md  download.sh  pyproject.toml  setup.sh  start.sh
backend/app/: __main__.py
backend/app/api/: main.py  models.py
backend/app/core/: settings.py
backend/app/ml/: __init__.py  datafactory.py  inference.py  reignn.py
backend/conf.d/: .env  README.md
backend/conf.d/docker/: docker-compose.yml
backend/conf.d/nginx/: reignn_demo_backend.conf  reignn_demo_backend_ssl.conf
backend/conf.d/supervisord/: reignn_demo_backend.conf
backend/conf.d/systemd/: reignn_demo_backend.service
baselines/GATNE-T/: README.md
baselines/PMNE/: README.md
baselines/RelGCN/: README.md
baselines/m2v/: README.md
baselines/n2v/: README.md
dataset_extractor/: data_clear.ipynb  loader.py  utils.py
datasets/CS1021medium/: CS1021medium_papers.edgelist  SSORC_CS_10_21_8432_53916_unfiltered_authors.edgelist  SSORC_CS_10_21_8432_53916_unfiltered_papers_targets.csv
datasets/CS1021small/: CS1021small_papers_targets.csv  README.md
datasets/SSORC_CS_10_21_1437_3164_unfiltered/: README.md  SSORC_CS_10_21_1437_3164_unfiltered_authors.edgelist  SSORC_CS_10_21_1437_3164_unfiltered_journals.csv  SSORC_CS_10_21_1437_3164_unfiltered_papers.edgelist
extractor/: subdatasets_extraction.ipynb
frontend/: package-lock.json  package.json
frontend/src/: Main.js  Network.js  Search_box.js  Stats.js  Team.js  index.js
model/: dataloader.py  utils.py
(+101 files in other folders)
