[tool.poetry]
name = "REIGNN Demo Backend"
version = "0.0.0"
description = "Backend for REIGNN Demo Paper"
authors = []

[tool.poetry.dependencies]
python = "~3.8"
fastapi = "^0.73.0"
pydantic = { extras = ["dotenv"], version = "^1.8.2" }
uvicorn = { extras = ["standard"], version = "^0.17.4" }
cookiecutter = "^1.7.3"
loguru = "^0.6.0"
pandas = "^1.4.0"
scipy = "^1.8.0"
networkx = "^2.6.3"
torch = "=1.8.1"
numpy = "^1.22.2"
torch-geometric = "=2.0.3"
mypy = "^0.931"
ujson = "^5.1.0"
torch-scatter = "^2.0.9"
torch-sparse = "^0.6.12"
websockets = "^10.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
